feat: add note position and color
